docs/v3.8.0/_sources/gallery/experiment/cylinder/cylinder_Qsca_vs_wavelength_std.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/experiment/cylinder/cylinder_Qsca_vs_wavelength_std.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_experiment_cylinder_cylinder_Qsca_vs_wavelength_std.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_experiment_cylinder_cylinder_Qsca_vs_wavelength_std.py:


Cylinder: Qsca vs wavelength std
================================

.. GENERATED FROM PYTHON SOURCE LINES 8-9

Importing the package dependencies: numpy, PyMieSim

.. GENERATED FROM PYTHON SOURCE LINES 9-17

.. code-block:: Python

    import numpy as np
    from TypedUnit import ureg

    from PyMieSim.experiment.scatterer import Cylinder
    from PyMieSim.experiment.source import Gaussian
    from PyMieSim.experiment import Setup
    from PyOptik import Material








.. GENERATED FROM PYTHON SOURCE LINES 18-19

Defining the source to be employed.

.. GENERATED FROM PYTHON SOURCE LINES 19-25

.. code-block:: Python

    source = Gaussian(
        wavelength=np.linspace(200, 1800, 300) * ureg.nanometer,
        polarization=0 * ureg.degree,
        optical_power=1 * ureg.watt,
        NA=0.2 * ureg.AU
    )







.. GENERATED FROM PYTHON SOURCE LINES 26-27

Defining the ranging parameters for the scatterer distribution

.. GENERATED FROM PYTHON SOURCE LINES 27-35

.. code-block:: Python

    scatterer = Cylinder(
        diameter=np.linspace(400, 1400, 10) * ureg.nanometer,
        property=Material.silver,
        medium_property=1 * ureg.RIU,
        source=source
    )






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    <_io.TextIOWrapper name='/opt/hostedtoolcache/Python/3.11.13/x64/lib/python3.11/site-packages/PyOptik/data/tabulated/silver.yml' mode='r' encoding='UTF-8'>




.. GENERATED FROM PYTHON SOURCE LINES 36-37

Defining the experiment setup

.. GENERATED FROM PYTHON SOURCE LINES 37-39

.. code-block:: Python

    experiment = Setup(scatterer=scatterer, source=source)








.. GENERATED FROM PYTHON SOURCE LINES 40-41

Measuring the properties

.. GENERATED FROM PYTHON SOURCE LINES 41-43

.. code-block:: Python

    dataframe = experiment.get('Qsca')








.. GENERATED FROM PYTHON SOURCE LINES 44-45

Plotting the results

.. GENERATED FROM PYTHON SOURCE LINES 45-46

.. code-block:: Python

    dataframe.plot(x="source:wavelength", std='scatterer:diameter')



.. image-sg:: /gallery/experiment/cylinder/images/sphx_glr_cylinder_Qsca_vs_wavelength_std_001.png
   :alt: cylinder Qsca vs wavelength std
   :srcset: /gallery/experiment/cylinder/images/sphx_glr_cylinder_Qsca_vs_wavelength_std_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Axes: xlabel='nanometer', ylabel='dimensionless'>




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.581 seconds)


.. _sphx_glr_download_gallery_experiment_cylinder_cylinder_Qsca_vs_wavelength_std.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: cylinder_Qsca_vs_wavelength_std.ipynb <cylinder_Qsca_vs_wavelength_std.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: cylinder_Qsca_vs_wavelength_std.py <cylinder_Qsca_vs_wavelength_std.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: cylinder_Qsca_vs_wavelength_std.zip <cylinder_Qsca_vs_wavelength_std.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
